# dvbindex

./: CMakeLists.txt  README.md  column_ids.h  dvbstring.c  dvbstring.h  export.c  export.h  insert-dvb-registered-ids.pl  ksx1001.c  ksx1001.pl  log.c  log.h  main.c  read.c  read.h  tables.c  tables.h  util.h  vec.h  version.h
test/: dvbindex-test.sh  ref.sqlite
